# distroless-demo

./: .gitignore  .yamllint  build-n-test.sh
cxx/: Dockerfile  so-5.5.24.4.tar.bz2
cxx-crow/: Dockerfile
cxx-crow/src/: CMakeLists.txt  helloworld.cpp
cxx-restinio/: Dockerfile
cxx-restinio/src/: CMakeLists.txt  helloworld.cpp
cxx/src/: CMakeLists.txt  helloworld.cpp
go/: Dockerfile  helloworld.go
java-quarkus/: Dockerfile
java-quarkus-native/: Dockerfile
java-quarkus-native/getting-started/: pom.xml
java-quarkus-native/getting-started/src/main/java/org/acme/quickstart/: GreetingResource.java
java-quarkus-native/getting-started/src/test/java/org/acme/quickstart/: GreetingResourceTest.java
java-quarkus-vm/getting-started/src/main/docker/: Dockerfile.jvm
pipelines/: distroless-pipeline.yaml  distroless-pipelinerun.yaml
